@@ -17,6 +17,7 @@ Merge trees can also be specified as input.
 \item Added the subset.row= argument to cosineNorm() for in-place subsetting.
 
 \item Added batch= and preserve.single= arguments to multiBatchNorm().
+Standardized behavior of subset.row= by adding a normalize.all= argument.
 }}
 
 \section{Version 1.0.0}{\itemize{
